Adjust admin redirects and remove extra about copy

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,6 +13,10 @@
         a {
           margin-right:20px;
           font-weight:bold;
+
+          &.active {
+            color:$purple2;
+          }
         }
       }
     }
