--- a/app/views/admin/papers/edit.html.erb
+++ b/app/views/admin/papers/edit.html.erb
@@ -29,15 +29,15 @@
   </div>
   
   <div class="field">
-    <%= form.label 'Content' %>
-    <%= form.text_field :content %>
-  </div>
-
-  <div class="field">
     <%= form.label 'Source' %>
     <%= form.text_field :source %>
   </div>
 
+  <div class="field">
+    <%= form.label 'Implementation' %>
+    <%= form.text_field :implementation %>
+  </div>
+  
   <div class="field">
     <%= form.label 'Authors' %>
     <%= form.text_field :authors %>
