--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <div class="about">
   <div class="wrapper">
     <h2>What is Algonomicon?</h2>
-    <p>Algonomicon is the home for machine learning engineers who want to become experts. We're collecting cutting edge research in the field and implementing it from scratch. We're forging a path to mastery through study and practice and we're hoping to recruit the ambitious along the way. The journey will be long and strenuous. Months of bitter cold and complete darkness await. Few will return but honor and recognition awaits those who do.</p>
+    <p>Algonomicon is the home for machine learning engineers who want to become experts. We're collecting cutting edge research in the field and implementing it from scratch. We're forging a path to mastery through study and practice.</p>
 
     <h2>Who am I?</h2>
     <p>My name is Tim Whitaker. I live with my beautiful girlfriend in Fort Collins, Colorado. I love to build things, read books and climb rocks.</p>
