Add event show style and content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import "pages/admin/layout";
 @import "pages/categories/show";
 @import "pages/articles/show";
+@import "pages/events/show";
 @import "pages/papers/show";
 @import "pages/about";
 @import "pages/contact";
