--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -29,6 +29,11 @@
   </div>
 
   <div class="field">
+    <%= form.label 'Description' %>
+    <%= form.text_area :description %>
+  </div>
+
+  <div class="field">
     <%= form.label 'Start' %>
     <%= form.datetime_select :start %>
   </div>
