--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -1,4 +1,4 @@
-<div class="paper">
+<div class="paper-show">
   <div class="wrapper">
     <h1 class="title"><%= @paper.title %> (<%= @paper.publish_date.strftime('%Y') %>)</h1>
 
