--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -1,3 +1,5 @@
+<%- title @paper.title %>
+
 <div class="paper-show">
   <div class="wrapper">
     <h1 class="title"><%= @paper.title %> (<%= @paper.publish_date.strftime('%Y') %>)</h1>
