Add work page back

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,11 +16,17 @@
 @import "components/wrapper";
 
 @import "pages/admin/layout";
+
 @import "pages/categories/show";
+
 @import "pages/articles/show";
+
 @import "pages/events/show";
+
 @import "pages/papers/show";
+
 @import "pages/about";
 @import "pages/contact";
 @import "pages/home";
 @import "pages/login";
+@import "pages/work";
