--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,13 @@
           <nav>
             <a href="/about">About</a>
             <a href="/contact">Contact</a>
+            <a href="/work">Work</a>
           </nav>
         </div>
 
         <div class="intro">
           <h2 class="tagline">Welcoming Our New Robot Overlords</h2>
-          <h1 class="title">Machine Learning Research</h1>
+          <h1 class="title">The Dark Arts of Machine Learning</h1>
           <div class="search">
             <div class="input-group">
               <span class="input-icon"><i class="fa fa-search"></i></span>
