Fix admin categories

--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -12,6 +12,11 @@
       </ul>
     </div>
   <% end %>
+  
+  <div class="field">
+    <%= form.label 'Title' %>
+    <%= form.text_field :title %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
