--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -13,6 +13,11 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= form.label 'Title' %>
+    <%= form.text_field :title %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
