Improve about page copy

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,7 @@
 <div class="about">
   <div class="wrapper">
     <h2>What is Algonomicon?</h2>
-    <p>Algonomicon is the home for machine learning engineers who want to become experts. We're collecting cutting edge research in the field and implementing it from scratch. We're forging a path to mastery through study and practice.</p>
+    <p>Algonomicon is a collection of pivotal machine learning research papers and open source implementations of them. I'm hoping to forge a path to machine learning mastery through the study and practice of cutting edge research in the field.</p>
 
     <h2>Who am I?</h2>
     <p>My name is Tim Whitaker. I live with my beautiful girlfriend in Fort Collins, Colorado. I love to build things, read books and climb rocks.</p>
