--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,7 +5,7 @@
     <h1 class="title"><%= @event.title %></h1>
     
     <div class="meta">
-      <p class="link">Link: <%= @event.link %></p>
+      <p class="link">Link: <%= link_to @event.link, @event.link %></p>
       <p class="start">Start: <%= @event.start %></p>
       <p class="end">End: <%= @event.end %></p>  
     </div>
