Add abstract label to papers

--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -14,6 +14,6 @@
       <p class="authors">Authors: <%= @paper.authors %></p>
     </div>
 
-    <p class="abstract"><%= @paper.abstract %></p>
+    <p class="abstract">Abstract: <%= @paper.abstract %></p>
   </div>
 </div>
