Add back link and breadcrumbs section

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,13 +2,6 @@
 
 <div class="about">
   <div class="wrapper">
-    <h2>What is Algonomicon?</h2>
-    <p>Algonomicon is a collection of pivotal machine learning research papers and open source implementations of them. I'm hoping to forge a path to machine learning mastery through the study and practice of cutting edge research in the field.</p>
-
-    <h2>Who am I?</h2>
-    <p>My name is Tim Whitaker. I live with my beautiful girlfriend in Fort Collins, Colorado. I love to build things, read books and climb rocks.</p>
-
-    <h2>What's in a name?</h2>
-    <p>The name Algonomicon comes from the writings of H.P. Lovecraft and his invented fictional grimoire called The Necronomicon. The Necronomicon is a collection of the darkest secrets of the universe, so powerful that people who read it are known to have gone mad.</p>
+    <img src="/images/unavoidable-1.png">
   </div>
 </div>
