--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -1,5 +1,13 @@
 <%- title @paper.title %>
 
+<div class="breadcrumbs">
+  <div class="wrapper">
+    <div class="links">
+      <a href="/"><i class="fa fa-caret-left"></i> Back</a>
+    </div>
+  </div>
+</div>
+
 <div class="paper-show">
   <div class="wrapper">
     <h1 class="title"><%= @paper.title %> (<%= @paper.publish_date.strftime('%Y') %>)</h1>
