--- a/app/assets/stylesheets/pages/papers/_show.scss
+++ b/app/assets/stylesheets/pages/papers/_show.scss
@@ -1,8 +1,17 @@
+.breadcrumbs {
+  .wrapper {
+    padding-bottom:0;
+    
+    .links {
+      border-bottom:1px solid $light2;
+      padding-bottom:10px;
+    }
+  }
+}
+
 .paper-show {
   .wrapper {
     .title {
-      border-bottom:1px solid $light2;
-      margin-bottom:10px;
       padding-bottom:5px;
     }
     .meta {
