--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,13 @@
 <%- title @event.title %>
 
+<div class="breadcrumbs">
+  <div class="wrapper">
+    <div class="links">
+      <a href="/"><i class="fa fa-caret-left"></i> Back</a>
+    </div>
+  </div>
+</div>
+
 <div class="event-show">
   <div class="wrapper">
     <h1 class="title"><%= @event.title %></h1>
