Add about image

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,6 +2,6 @@
 
 <div class="about">
   <div class="wrapper">
-    <img src="/images/unavoidable-1.png">
+    <img src="/images/unavoidable.png">
   </div>
 </div>
