Update header colors

--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -2,7 +2,7 @@ $dark1: rgb(20, 20, 20);
 $dark2: rgb(60, 60, 60);
 $dark3: rgb(120, 120, 120);
 
-$light1: #f0f0f0;
+$light1: rgb(240, 240, 240);
 $light2: rgb(210, 210, 210);
 $light3: rgb(180, 180, 180);
 
