Add necessary changes for prod deployment

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,5 +1,5 @@
 header {
-  background:url(/assets/nebula.jpg) no-repeat center;
+  background:asset-url('nebula.jpg') no-repeat center;
   background-size:cover;
   height:35vh;
 
