--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         </div>
 
         <div class="intro">
-          <h2 class="tagline">Welcoming Our New Robot Overlords</h2>
+          <h2 class="tagline">The Biggest Collection of Open Source ML Models</h2>
           <h1 class="title">The ML Research Lab</h1>
           <div class="search">
             <div class="input-group">
