--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,6 +2,6 @@
 
 <div class="about">
   <div class="wrapper">
-    <img src="/images/unavoidable.png">
+    <img src="<%= asset_url('unavoidable.png') %>">
   </div>
 </div>
