--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -9,6 +9,10 @@
     .results {
       padding-right:10px;
 
+      .message {
+        padding:10px 0;
+      }
+
       .item {
         display:block;
         padding:10px 0;
