Add mastodon feed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
           </div>
           <nav>
             <a href="/about">About</a>
+            <a href="https://algonomicon.io">Community</a>
             <a href="/contact">Contact</a>
           </nav>
         </div>
