Fix grid column width for long links

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -80,6 +80,7 @@
             @include font-size(14);
             padding:10px 0;
             font-family:monospace;
+            display:block;
           }
 
           .post {
