Remove top padding for first post in list

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -67,6 +67,9 @@
                 color:$purple2;
               }
             }
+            &:first-child {
+              padding-top:0;
+            }
           }
         }
       }
