--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -32,16 +32,19 @@
       </div>
 
       <div class="secondary">
-        <div class="events">
-          <h3 class="heading">Events</h3>
-          <% @events.first(10).each do |event| %>
-            <a class="item" target="_blank" href="<%= event.link %>">
-              <h3 class="title"><%= event.title %></h3>
-              <div class="meta">
-                <time class="timestamp"><%= event.schedule %></time>
-                <p class="location"><%= event.location %></p>
+        <div class="feed">
+          <a class="heading" href="https://algonomicon.io">Feed</a>
+          <% @posts.first(5).each do |post| %>
+            <div class="post">
+              <div class="avatar">
+                <img src="<%= post['account']['avatar'] %>">
               </div>
-            </a>
+              <div class="main">
+                <span class="username">@<%= post['account']['username'] %></span>
+                <div class="content"><%= raw(post['content']) %></div>
+                <p class="date"><%= time_ago_in_words(post['created_at']) %> ago</p>
+              </div>
+            </div>
           <% end %>
         </div>
       </div>
