--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -8,7 +8,7 @@
         <p class="message">Nothing to see here.</p>
       <% else %>
         <% @papers.each do |paper| %>
-          <a class="item" href="<%= paper_path(paper.id) %>">
+          <a class="item" href="<%= paper_path(paper.slug) %>">
             <h2 class="title"><%= paper.title %> (<%= paper.publish_date.strftime('%Y') %>)</h2>
             <p class="description"><%= paper.abstract.truncate(300, separator: ' ') %></p>
 
