Change feed title

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
 
       <div class="secondary">
         <div class="feed">
-          <a class="heading" href="https://algonomicon.io">Feed</a>
+          <a class="heading" href="https://algonomicon.io">Community</a>
           <% @posts.first(5).each do |post| %>
             <div class="post">
               <div class="avatar">
