--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <%- title "Home" %>
 
 <div class="home">
-  <div class="categories">
+<!--   <div class="categories">
     <div class="wrapper">
       <div class="list">
         <a href="/" class="active">All</a>
@@ -10,6 +10,19 @@
         <% end %>
       </div>
     </div>
+  </div> -->
+
+  <div class="categories">
+    <div class="wrapper">
+      <div class="list">
+        <a class="active" href="#">Home</a>
+        <a href="#">Articles</a>
+        <a href="#">Datasets</a>
+        <a href="#">Events</a>
+        <a href="#">Papers</a>
+        <a href="#">Projects</a>
+      </div>
+    </div>  
   </div>
 
   <div class="showcase">
@@ -33,7 +46,7 @@
 
       <div class="secondary">
         <div class="feed">
-          <a class="heading" href="https://algonomicon.io">Community</a>
+          <a class="heading" href="https://algonomicon.io">Feed</a>
           <% @posts.first(5).each do |post| %>
             <div class="post">
               <div class="avatar">
