--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,12 +2,12 @@
   <div class="categories">
     <div class="wrapper">
       <div class="list">
-        <a href="#">Home</a>
-        <a href="#">Articles</a>
-        <a href="#">Datasets</a>
-        <a class="active" href="#">Events</a>
-        <a href="#">Papers</a>
-        <a href="#">Projects</a>
+        <a href="/">Home</a>
+        <a href="/articles">Articles</a>
+        <a href="/datasets">Datasets</a>
+        <a class="active" href="/events">Events</a>
+        <a href="/papers">Papers</a>
+        <a href="/projects">Projects</a>
       </div>
     </div>  
   </div>
