--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,12 +15,12 @@
   <div class="categories">
     <div class="wrapper">
       <div class="list">
-        <a class="active" href="#">Home</a>
-        <a href="#">Articles</a>
-        <a href="#">Datasets</a>
-        <a href="#">Events</a>
-        <a href="#">Papers</a>
-        <a href="#">Projects</a>
+        <a class="active" href="/">Home</a>
+        <a href="/articles">Articles</a>
+        <a href="/datasets">Datasets</a>
+        <a href="/events">Events</a>
+        <a href="/papers">Papers</a>
+        <a href="/projects">Projects</a>
       </div>
     </div>  
   </div>
