Add controllers and views for projects and datasets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 
 @import "components/main";
 @import "components/buttons";
+@import "components/categories";
 @import "components/footer";
 @import "components/forms";
 @import "components/header";
@@ -14,8 +15,6 @@
 @import "components/wrapper";
 
 @import "pages/admin/layout";
-
-@import "pages/categories/show";
 
 @import "pages/articles/show";
 
