--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,28 +1,28 @@
-<div class="articles-index">
+<div class="projects-index">
   <div class="categories">
     <div class="wrapper">
       <div class="list">
         <a href="/">Home</a>
-        <a class="active" href="/articles">Articles</a>
+        <a href="/articles">Articles</a>
         <a href="/datasets">Datasets</a>
         <a href="/events">Events</a>
         <a href="/papers">Papers</a>
-        <a href="/projects">Projects</a>
+        <a class="active" href="/projects">Projects</a>
       </div>
     </div>  
   </div>
 
   <div class="showcase">
     <div class="wrapper">
-      <% if @articles.empty? %>
+      <% if @projects.empty? %>
         <p class="message">Nothing to see here.</p>
       <% else %>
-        <% @articles.each do |article| %>
-          <a class="item" href="<%= article_path(article.slug) %>">
-            <h2 class="title"><%= article.title %></h2>
+        <% @projects.each do |project| %>
+          <a class="item" href="<%= project_path(project.slug) %>">
+            <h2 class="title"><%= project.title %></h2>
           </a>
         <% end %>
-        <%= paginate @articles %>
+        <%= paginate @projects %>
       <% end %>
     </div>
   </div>
