--- a/app/assets/stylesheets/base/_reset.scss
+++ b/app/assets/stylesheets/base/_reset.scss
@@ -27,7 +27,7 @@ body {
   line-height: 1;
 }
 ol, ul {
-  list-style: none;
+  list-style: inside;
 }
 blockquote, q {
   quotes: none;
@@ -43,4 +43,5 @@ table {
 }
 img {
   display:block;
+  width:100%;
 }
