--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -48,6 +48,9 @@ p {
   @include font-size(14);
   margin-bottom:20px;
 }
+ul, ol {
+  margin-bottom:20px;  
+}
 
 pre, code {
   font-family:monospace;
