--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,48 +7,14 @@
 
       .primary {
         border-right:1px solid $light2;
+        padding-right:10px;
 
-        .papers {
-          padding-right:10px;
-
-          .item {
-            display:block;
-            padding:10px 0;
-            border-bottom:1px solid $light2;
-
-            .title {
-              @include font-size(16);
-              transition:all 0.1s ease;
-            }
-            .description {
-              color:$dark2;
-              font-weight:normal;
-              margin-bottom:10px;
-            }
-
-            .meta {
-              span {
-                color:$light3;
-                @include font-size(12);
-                margin-right:10px;
-                padding-right:10px;
-                font-family:monospace;
-
-                &:not(:last-child) {
-                  border-right:1px solid $light2;
-                }
-              }
-            }
-            &:hover {
-              .title {
-                color:$purple2;
-              }
-            }
-            &:first-child {
-              padding-top:0;
-            }
+        .intro {
+          h1 {
+            margin-bottom:10px;
           }
         }
+
       }
       .secondary {
         padding-left:10px;
