--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -32,10 +32,11 @@
 
     <aside class="sidebar">
       <%= link_to 'Articles', admin_articles_path %>
-      <%= link_to 'Categories', admin_categories_path %>
-      <%= link_to 'Events', admin_events_path %>
-      <%= link_to 'Papers', admin_papers_path %>
-      <%= link_to 'Users', admin_users_path %>
+      <%= link_to 'Datasets', admin_datasets_path %>
+      <%= link_to 'Events',   admin_events_path %>
+      <%= link_to 'Papers',   admin_papers_path %>
+      <%= link_to 'Projects', admin_projects_path %>
+      <%= link_to 'Users',    admin_users_path %>
     </aside>
 
     <main>
