--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -14,16 +14,18 @@
 
   <div class="showcase">
     <div class="wrapper">
-      <% if @papers.empty? %>
-        <p class="message">Nothing to see here.</p>
-      <% else %>
-        <% @papers.each do |paper| %>
-          <a class="item" href="<%= paper_path(paper.slug) %>">
-            <h2 class="title"><%= paper.title %></h2>
-          </a>
-        <% end %>
-        <%= paginate @papers %>
+      <% @papers.each do |paper| %>
+        <a class="item" href="<%= paper_path(paper.slug) %>">
+          <h2 class="title"><%= paper.title %> (<%= paper.publish_date.strftime('%Y') %>)</h2>
+          <p class="description"><%= paper.abstract.truncate(300, separator: ' ') %></p>
+
+          <div class="meta">
+            <span><i class="far fa-clock"></i> <%= paper.created_at.strftime('%b %d') %></span>
+            <span><i class="far fa-folder"></i></span>
+          </div>
+        </a>
       <% end %>
+      <%= paginate @papers %>
     </div>
   </div>
 </div>
