--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
             <li>Overpopulation and Global Education</li>
             <li>Transparency and Misinformation Campaigns</li>
             <li>Cyber Threats and Regional Stability</li>
-            <li>Atomic Energy and Weapons of Mass Destruction</li>
+            <li>Animal Conservation and Renewable Energy</li>
           </ul>
 
           <p>If you own or work at a company that is tackling global or social issues, we'd love to get in touch. Feel free to visit our <a href="/contact">contact page</a> or reach out directly to info@algonomicon.com.</p>
